Modificacion del parrafo de la seccion de home

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="home-content">
             <h4>Explora el Mundo</h4>
             <h1>Con <span>Travelling with Dani</span></h1>
-            <p>En nuestra agencia, nos apasiona hacer realidad tus sueños de viaje. Desde emocionantes aventuras en
+            <p>En nuestra agencia, nos apasiona hacer realidad tus viajes de ensueño. Desde emocionantes aventuras en
                 destinos exóticos hasta relajantes escapadas en paraísos tropicales, estamos aquí para diseñar la
                 experiencia perfecta para ti.</p>
         </div>
