Cambio del valor del precio de los paquetes y del simbolo de la moneda

--- a/index-pl.html
+++ b/index-pl.html
@@ -443,7 +443,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>2.153zl <span><button>Zarezerwować</button></span></h5>
+                        <h5>2.153zł <span><button>Zarezerwować</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -462,7 +462,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>2.153zl <span><button>Zarezerwować</button></span></h5>
+                        <h5>2.153zł <span><button>Zarezerwować</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -482,7 +482,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>2.153zl <span><button>Zarezerwować</button></span></h5>
+                        <h5>2.153zł <span><button>Zarezerwować</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -504,7 +504,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>2.153zl <span><button>Zarezerwować</button></span></h5>
+                        <h5>2.153zł <span><button>Zarezerwować</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -523,7 +523,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>2.153zl <span><button>Zarezerwować</button></span></h5>
+                        <h5>2.153zł <span><button>Zarezerwować</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -542,7 +542,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>2.153zl <span><button>Zarezerwować</button></span></h5>
+                        <h5>2.153zł <span><button>Zarezerwować</button></span></h5>
                     </div>
                 </div>
             </div>
