--- a/index-en.html
+++ b/index-en.html
@@ -449,7 +449,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>500€ <span><button>Book</button></span></h5>
+                        <h5>428£ <span><button>Book</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -468,7 +468,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>500€ <span><button>Book</button></span></h5>
+                        <h5>428£ <span><button>Book</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -487,7 +487,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>500€ <span><button>Book</button></span></h5>
+                        <h5>428£ <span><button>Book</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -509,7 +509,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>500€ <span><button>Book</button></span></h5>
+                        <h5>428£ <span><button>Book</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -528,7 +528,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>500€ <span><button>Book</button></span></h5>
+                        <h5>428£ <span><button>Book</button></span></h5>
                     </div>
                 </div>
             </div>
@@ -547,7 +547,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <h5>500€ <span><button>Book</button></span></h5>
+                        <h5>428£ <span><button>Book</button></span></h5>
                     </div>
                 </div>
             </div>
