añadir .html a los enlaces del nav en el idioma polaco

--- a/index-pl.html
+++ b/index-pl.html
@@ -88,13 +88,13 @@
                                         Hiszpański
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="index-en.html">
                                         <img src="assets/images/flags/english.png" alt="Idioma Inglés"
                                             class="country-flag">
                                         Angielski
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="index-pl.html">
                                         <img src="assets/images/flags/polish.png" alt="Idioma Inglés"
                                             class="country-flag">
                                         Polski
