--- a/index-pl.html
+++ b/index-pl.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Strona główna</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ofertas">Oferty</a>
+                        <a class="nav-link" href="#offers">Oferty</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#about">O nas</a>
