Corrección de tildes

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             </div>
             <div class="col-md-7 py-3 py-md-0">
                 <h5>Sobre nosotros</h5>
-                <h1>Como trabaja esta agencia de viajes</h1>
+                <h1>¿Cómo trabaja esta agencia de viajes?</h1>
                 <p>Entendemos que cada viajero es único, con necesidades y preferencias específicas. Por ello, nos
                     comprometemos a ofrecerte un servicio completamente personalizado. Nuestros expertos en viajes
                     trabajarán contigo para comprender tus deseos y diseñar una experiencia que se adapte perfectamente
