Cambio de opinion

--- a/index.html
+++ b/index.html
@@ -606,11 +606,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <p>Mi experiencia con la agencia de viajes Travel with Dani ha sido muy negativa. La falta de
-                            comunicación y
-                            la pobre gestión de reservas arruinaron mi viaje. El servicio al cliente fue deficiente y no
-                            mostraron responsabilidad ante los problemas surgidos. No recomendaría esta agencia a nadie,
-                            buscaré opciones más confiables en el futuro.</p>
+                        <p>¡Increíble experiencia con esta agencia de viajes! Desde el primer contacto hasta el último detalle del viaje, todo fue impecable. El equipo fue extremadamente profesional y atento, asegurándose de que cada aspecto del viaje estuviera perfectamente organizado. Los destinos sugeridos fueron espectaculares y las actividades planificadas fueron emocionantes y enriquecedoras. ¡Definitivamente recomendaré esta agencia a amigos y familiares y espero volver a viajar con ellos en el futuro!</p>
                     </div>
                 </div>
             </div>
