arreglo del link de contact

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="nav-link" href="#reviews">Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contactanos">Contáctanos</a>
+                        <a class="nav-link" href="#contact">Contáctanos</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown user">
