--- a/index-pl.html
+++ b/index-pl.html
@@ -59,7 +59,7 @@
                         <a class="nav-link" href="#reviews">Opinie</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contactanos">Skontaktuj się z nami</a>
+                        <a class="nav-link" href="#contact">Skontaktuj się z nami</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown user">
