--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script defer src="js/btn-contactanos-es.js"></script>
+    <script defer src="js/video-change.js"></script>
 
 </head>
 
 <body>
     <!-- Navigation Start -->
-    <nav class="navbar navbar-expand-sm">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/images/navbar-logo/travel.png" alt="Around the Earth" class="img-logo">
@@ -113,7 +114,7 @@
     <!-- Home Section Start -->
     <section class="home content" id="home">
         <div class="home-video">
-            <video src="assets/videos/video (1080p).mp4" autoplay loop muted></video>
+            <video id="video-home" src="assets/videos/video-md-lg.mp4" autoplay loop muted></video>
         </div>
 
         <div class="home-overlay"></div>
