--- a/index-en.html
+++ b/index-en.html
@@ -26,6 +26,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script defer src="js/btn-contactanos-en.js"></script>
+    <script defer src="js/video-change.js"></script>
 
 </head>
 
