Añdir nuevo video para pantallas de moviles en el resto de idiomas tambien(esta vez si que si)

--- a/index-pl.html
+++ b/index-pl.html
@@ -32,7 +32,7 @@
 
 <body>
     <!-- Navigation Start -->
-    <nav class="navbar navbar-expand-sm">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index-pl.html">
                 <img src="assets/images/navbar-logo/travel.png" alt="Around the Earth" class="img-logo">
@@ -114,7 +114,7 @@
     <!-- Home Section Start -->
     <section class="home content" id="home">
         <div class="home-video">
-            <video src="assets/videos/video (1080p).mp4" autoplay loop muted></video>
+            <video id="video-home"  src="assets/videos/video (1080p).mp4" autoplay loop muted></video>
         </div>
 
         <div class="home-overlay"></div>
