--- a/index-en.html
+++ b/index-en.html
@@ -33,7 +33,7 @@
 <body>
     <!-- Navigation Start -->
     <!-- Navigation Start -->
-    <nav class="navbar navbar-expand-sm">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/images/navbar-logo/travel.png" alt="Around the Earth" class="img-logo">
@@ -117,7 +117,7 @@
     <!-- Home Section Start -->
     <section class="home content" id="home">
         <div class="home-video">
-            <video src="assets/videos/video (1080p).mp4" autoplay loop muted></video>
+            <video id="video-home"  src="assets/videos/video (1080p).mp4" autoplay loop muted></video>
         </div>
 
         <div class="home-overlay"></div>
