--- a/index-en.html
+++ b/index-en.html
@@ -188,7 +188,7 @@
 
     <!-- Popular Destinies Section Start -->
     <section class="popular" id="popular">
-        <h3>Destinos Populares</h3>
+        <h3>Popular Destinations</h3>
         <div class="row">
             <div class="col-md-3 py-3 py-md-0">
                 <button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#card-modal1">
